@@ -7,7 +7,7 @@ ff3a7ebe6081a1740a5057ae77b796a595338806 bqfft
 7d46098431f39c265e47254e420576559587b3fe icons/scalable
 3257ddb6fff110cc88f3ffeaeefa0f29d5eb3b6f piper-cpp
 5f67a29f0fc7f1b908f7cde4866173a7af337862 sv-dependency-builds
-36076ef960fb86ade2dd2eca13edb1ed154ef55f svapp
-576be7933ec70cd7a24327536c6ad5e315c51bde svcore
-a68c25ba1153ae20c0a387f28a7a79be243d69b2 svgui
+b777379e70d851aa75ff66b677fb3bd4c79808d4 svapp
+b1a7f45544003003008ee5098628fc009771c5dc svcore
+6828735468c9f096e02a3dfa67a6529876741f69 svgui
 0eebd22a081a824067bf3d5de65326696feab653 vamp-plugin-sdk
